# global_agent_system

./: .cursorrules  .env.example  .gitignore  README.md  WINDOWS_ENV.md  pyproject.toml  test_parser.py
.github/workflows/: scheduler.yml
knowledge/: chief_editor_rubric.txt  culture_researcher_rubric.txt  style_guide.txt  test.txt
knowledge/daily_socials_knowledge/: ai_researcher_rubric.txt  chief_editor_rubric.txt  culture_researcher_rubric.txt  data_cleaner_rubric.txt  kevins_philosophy_source.txt  religion_researcher_rubric.txt  social_writer_rubric.txt  style_guide.txt
logs/: crew_run.txt
src/global_agent_system/: main.py
src/global_agent_system/crews/daily_socials_crew/: __init__.py  daily_socials_crew.py
src/global_agent_system/crews/daily_socials_crew/config/: agents.yaml  tasks.yaml
src/global_agent_system/crews/poem_crew/: poem_crew.py
src/global_agent_system/crews/poem_crew/config/: agents.yaml  tasks.yaml
src/global_agent_system/tools/: custom_tool.py
