[project]
name = "global_agent_system"
version = "0.1.0"
description = "global_agent_system using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.10.1",
    # Official Gemini SDK (replaces deprecated google-generativeai for new integrations)
    "google-genai>=1.65.0",
    # Pin NumPy 1.26.x: single ABI for chromadb + onnxruntime + lancedb on Windows (avoid NumPy 2 mixed-extension crashes)
    "numpy>=1.26.4,<2.0.0",
    "sentence-transformers>=5.3.0",
]

[project.scripts]
kickoff = "global_agent_system.main:kickoff"
run_crew = "global_agent_system.main:kickoff"
plot = "global_agent_system.main:plot"
run_with_trigger = "global_agent_system.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"

[tool.uv]
required-environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'"
]
